--- a/build-profile.json5
+++ b/build-profile.json5
@@ -31,6 +31,18 @@
           ]
         }
       ]
+    },
+    {
+      "name": "feature_daojia",
+      "srcPath": "./feature_daojia",
+      "targets": [
+        {
+          "name": "default",
+          "applyToProducts": [
+            "default"
+          ]
+        }
+      ]
     }
   ]
 }
