feat: library_static_common

--- a/build-profile.json5
+++ b/build-profile.json5
@@ -55,6 +55,10 @@
           ]
         }
       ]
+    },
+    {
+      "name": "library_static_common",
+      "srcPath": "./library_static_common"
     }
   ]
 }
