feat: ability_bussiness_card

--- a/build-profile.json5
+++ b/build-profile.json5
@@ -83,6 +83,18 @@
           ]
         }
       ]
+    },
+    {
+      "name": "ability_bussiness_card",
+      "srcPath": "./ability_bussiness_card",
+      "targets": [
+        {
+          "name": "default",
+          "applyToProducts": [
+            "default"
+          ]
+        }
+      ]
     }
   ]
 }
