feat: ability_grid

--- a/build-profile.json5
+++ b/build-profile.json5
@@ -119,6 +119,18 @@
           ]
         }
       ]
+    },
+    {
+      "name": "ability_grid",
+      "srcPath": "./ability_grid",
+      "targets": [
+        {
+          "name": "default",
+          "applyToProducts": [
+            "default"
+          ]
+        }
+      ]
     }
   ]
 }
