feat: ability_login

--- a/build-profile.json5
+++ b/build-profile.json5
@@ -143,6 +143,18 @@
           ]
         }
       ]
+    },
+    {
+      "name": "ability_login",
+      "srcPath": "./ability_login",
+      "targets": [
+        {
+          "name": "default",
+          "applyToProducts": [
+            "default"
+          ]
+        }
+      ]
     }
   ]
 }
