feat: ability_splash_screen

--- a/build-profile.json5
+++ b/build-profile.json5
@@ -167,6 +167,18 @@
           ]
         }
       ]
+    },
+    {
+      "name": "ability_splash_screen",
+      "srcPath": "./ability_splash_screen",
+      "targets": [
+        {
+          "name": "default",
+          "applyToProducts": [
+            "default"
+          ]
+        }
+      ]
     }
   ]
 }
