--- a/build-profile.json5
+++ b/build-profile.json5
@@ -179,6 +179,10 @@
           ]
         }
       ]
+    },
+    {
+      "name": "library_router",
+      "srcPath": "./library_router"
     }
   ]
 }
