--- a/entry/oh-package.json5
+++ b/entry/oh-package.json5
@@ -18,7 +18,8 @@
 //    '@ohos/ability_splash_screen': 'file:./../ability_splash_screen',
 //    '@ohos/feature_daojia': 'file:./../feature_daojia',
     '@ohos/library_share_common': 'file:./../library_share_common',
-    '@ohos/library_static_common': 'file:./../library_static_common'
+    '@ohos/library_static_common': 'file:./../library_static_common',
+    '@ohos/library_router': 'file:./../library_router'
   }
 }
 
