--- a/library_static_common/oh-package.json5
+++ b/library_static_common/oh-package.json5
@@ -5,5 +5,7 @@
   "main": "Index.ets",
   "author": "",
   "license": "Apache-2.0",
-  "dependencies": {}
+  "dependencies": {
+    '@ohos/library_router': 'file:./../library_router'
+  }
 }
