feat: router test success backup

--- a/build-profile.json5
+++ b/build-profile.json5
@@ -183,6 +183,10 @@
     {
       "name": "library_router",
       "srcPath": "./library_router"
+    },
+    {
+      "name": "harA",
+      "srcPath": "./harA"
     }
   ]
 }
