--- a/entry/build-profile.json5
+++ b/entry/build-profile.json5
@@ -1,6 +1,16 @@
 {
   "apiType": "stageMode",
   "buildOption": {
+    "arkOptions": {
+      "runtimeOnly": {
+        "sources": [
+        ],
+        "packages": [
+          "@ohos/hara"
+//          "@ohos/libraryCommon"
+        ]
+      }
+    }
   },
   "buildOptionSet": [
     {
